--- a/foundations.tex
+++ b/foundations.tex
@@ -1,4 +1,4 @@
-\todo{Orlov reconstruction, HKR isomorphism}
+\todo{Orlov reconstruction, HKR isomorphism, dg enhancements?}
 
 \subsection{The derived category of an abelian category}
 
@@ -104,8 +104,7 @@ To do this, first need the following:
      \end{equation*}
 \end{proposition}
 
-To prove this, use general properties about injective objects. Look at e.g. Weibel.
-\todo{add Weibel reference}
+To prove this, use general properties about injective objects. Look at e.g. \cite{Weibel}.
 
 This then implies that if $A$ is arbitrary and $I$ is a complex of injectives, then
 \begin{equation*}
@@ -823,7 +822,7 @@ Notation: we put $E \perp F$ whenever $\RHom(E,F)=0$. This is not a symmetric re
 
     \todo{introduce $\boxtimes$ in section on composing Fourier-Mukai transforms}
 
-    We use the notation $\O(-1)\boxtimes\Omega(1)=q^*\O(-1)\otimes p^*\Omega(1)$. We have from HAR \todo{add Hartshorne reference?} the Euler sequence
+    We use the notation $\O(-1)\boxtimes\Omega(1)=q^*\O(-1)\otimes p^*\Omega(1)$. We have from \cite{Hartshorne} the Euler sequence
     \begin{equation*}
         0 \to \Omega(1) \to \O^{n+1} \to \O(1) \to 0
     \end{equation*}
