--- a/body.tex
+++ b/body.tex
@@ -7,4 +7,5 @@
 \section{K3 surfaces and the cubic fourfold}
 \input{cubicfourfold.tex}
 
-
+\section{Matrix factorizations}
+\input{matrixfactorizations.tex}
