added some stuff on the cubic fourfold section

--- a/body.tex
+++ b/body.tex
@@ -1,11 +1,15 @@
 \section{Foundations}
 \input{foundations.tex}
+\newpage
 
 \section{Flips and flops}
 \input{flops.tex}
+\newpage
 
 \section{K3 surfaces and the cubic fourfold}
 \input{cubicfourfold.tex}
+\newpage
 
 \section{Matrix factorizations}
 \input{matrixfactorizations.tex}
+\newpage
