--- a/foundations.tex
+++ b/foundations.tex
@@ -910,7 +910,7 @@ Suppose we want to project out of a single exceptional object $E$. In analogy wi
 We can do the same thing in derived categories, except that homs are not symmetric, so there are two ways to do this, corresponding to the left and right orthogonals.
 
 \begin{definition}{Orthogonal projections from single exceptional object}{Orthogonal projections from single exceptional object}
-    There are two projection functors $\mL_E:D^b(X)\to\lperp\langle E\rangle$, $\mR_E:D^b(X)\to\langle E\rangle^\perp$
+    There are two projection functors $\mL_E:D^b(X)\to\langle E\rangle ^\perp$, $\mR_E:D^b(X)\to\langle \lperp E\rangle$
     \begin{equation*}
         \mL_E(F) \coloneqq \cone(\RHom(E,F)\otimes E \to F), \quad
         \mR_E(F) \coloneqq \cone(F\to\RHom(F,E)^\lor\otimes E )[-1]
