--- a/cubicfourfold.tex
+++ b/cubicfourfold.tex
@@ -1,2 +1,137 @@
-Woah!
+\subsection{A quick review of K3 surfaces}
+\begin{definition}{K3 surface}{K3 surface}
+A K3 surface is a compact complex surface with $\omega_{X}$ trivial and $H^1(X,\mathcal{O}_{X})=0$.
+\end{definition}
+
+Firstly, spaces derived equivalent to K3 surfaces are also K3 surfaces: their dimensions have to be the same because the Serre functors are isomorphic and hence the orders of the canonical bundles are the same. Similarly, by passage to cohomology, we know that $$\bigoplus_{p-q=i}H^{p,q}(X)\simeq \bigoplus_{p-q=i}H^{p,q}(Y)$$
+Hence, since $h^{0,1}=h^{1,2}$ by Hodge symmetry and Serre duality, we see that both are zero.
+
+Computations using Riemann-Roch show that $c_2=e(X)=24$. Then Poincare duality shows $b_2=22$. 
+
+The Hodge decomposition tells us that $$H^2(X,\mathbb{C})=H^{2,0}\oplus H^{1,1}\oplus H^{0,2}$$But both $h^{2,0}=h^{0,2}=1$ and hence $h^{1,1}=20$. 
+
+\begin{theorem}{Global Torelli}{Global Torelli}
+Two K3 surfaces are isomorphic if and only if there is a Hodge isometry $H^2(X,\mathbb{C})\simeq H^2(Y,\mathbb{C})$.
+\end{theorem}
+
+A Hodge isometry respects the intersection pairing and the Hodge decomposition. 
+
+%Because the canonical bundle of $\mathbb{P}^1$ is $\mathcal{O}(-2)$ and is also isomorphic to the normal bundle by adjunction, we see that $$C\cdot C=\int _{C}c_{1}(\mathcal{O}(-2)) =-2$$
+%Such curves define a reflection on the cohomology: $$\begin{gathered}
+ 
+%s_{\delta}:H^2(X,\mathbb{Z})\xrightarrow{}H^2(X,\mathbb{Z})\\
+%\alpha\mapsto \alpha + \langle \alpha ,\delta \rangle \delta
+%\end{gathered}$$
+%Is this induced by a spherical twist? Yes, I think the one given by $\mathcal{O}_{C}$. Let's see why this is true:
+
+%Firstly, $\mathcal{O}_{C}$ is spherical because $$\mathrm{Ext^1}(\mathcal{O}_{C},\mathcal{O}_{C})=H^0(\mathcal{Ext}^1)=H^0(\mathcal{N}_{C/X})=H^0(\mathcal{O}(-2))=0$$The other Ext groups are one-dimensional, by Serre duality. 
+
+
+%Now, the Todd class of a K3 surface $X$ is given as $(1,0,2)$ so its square root is $(1,0,1)$. Hence, for a vector bundle, we see that $$v(\mathcal{E})=(\mathrm{rk}\,\mathcal{E}, c_{1}\mathcal{E}, \mathrm{rk}(\mathcal{E})+c_{1}(\mathcal{E})^2/2-c_{2}(\mathcal{E}))$$
+%So for a rational sphere given by the zero locus of a line bundle $\mathcal{L}$, we see by the resolution $$\mathcal{L}^\lor\xrightarrow{}\mathcal{O}_{X}\xrightarrow{}\mathcal{O}_{C}$$ that $\mathrm{ch}(\mathcal{O}_{C})=\mathrm{ch}(\mathcal{L}^\lor)-\mathrm{ch(\mathcal{O}_{X})}=-c_{1}(\mathcal{L})$. Moreover, $v(\mathcal{L}^\lor)=(1,-\delta,0), v(\mathcal{O}_{X})=(1,0,0)$ and hence $$v(\mathcal{O}_{C})=(0,\delta,0)$$ and this recovers the reflection on $H^2(X,\mathbb{Z})$. 
+
+%Wait it's apparently $\mathcal{O}_{C}(-1)$?
+
+%Next: derived equivalence of K3 surfaces iff Hodge isometry of the Mukai Hodge structure.
+
+%Also: moduli of sheaves
+
+\subsection{The cubic fourfold}
+
+Take a cubic fourfold $X$ in $\mathbb{P}^5$. This has canonical bundle $K_{X}=-3H$ so is a Fano of index 3. By using Kodaira vanishing, one can show that $$\mathcal{O}_{X}(-2H), \mathcal{O}_{X}(-H), \mathcal{O}_{X}$$form an exceptional collection. The orthogonal complement is given by $$\mathcal{A}_{X}=\{\mathcal{F}\in \mathbf{D}^b(X)|\,\mathrm{Ext}^\bullet(\mathcal{O}_{X}(-iH), \mathcal{F})=0\}$$This component, named after Kuznetsov, is very interesting, as it looks like the derived category of a K3 surface.
+
+\begin{proposition}{Kuznetsov component is CY2}{Kuznetsov component is CY2}
+The category $\mathcal{A}_{X}$ is a CY2 category with Hochschild homology the same as that of a K3 surface. Therefore, it is indecomposable and the semiorthogonal decomposition is maximal.
+\end{proposition}
+
+The first statement will be proved in the subsequent section. To prove the second statement about the Hochschild cohomology, we first need to understand the Hodge diamond.
+
+\todo{HKR isomorphism}
+\begin{theorem}{Hochschild-Kostant-Rosenberg}{HKR}
+    $$HH^k(\mathcal{D}(X))=\bigoplus_{p+q=k} H^q(X, \Lambda^p T_X), HH_k(\mathcal{D}(X))=\bigoplus_{q-p=k} H^q(X, \Omega^p_X)=\bigoplus_{q-p=k} H^{p,q}(X)$$
+    
+\end{theorem}
+
+\subsubsection{Hodge diamond}
+
+Let us first think about the Hodge diamond of $X$. Embed $\mathbb{P}^5$ via the Veronese embedding in $\mathbb{P}V_{3,5+1}$, the space of degree 3 polynomials in 6 variables. Then, a hyperplane section of the image of $\mathbb{P}^5$ consists of a linear relation between the basis of monomials of this vector space, and hence is precisely a cubic fourfold $X$. The Lefschetz hyperplane theorem states that then $$H^\bullet(\mathbb{P}^5)\xrightarrow{}H^\bullet (X) \text{ iso for }\bullet<4$$
+We thus see, by Poincare duality, that $b_{1}=b_{3}=b_{5}=b_{7}=0$. Similarly, $b_{2}=b_{6}=1$ and must be given by $h^{1,1}$ by Hodge theory. We have that $H^2(X;\mathbb{Z})=\mathbb{Z}$ and the LES from the exponential sequence tells us that $$H^1(X,\mathcal{O}_{X})\xrightarrow{}H^1(X,\mathcal{O}_{X}^*)\xrightarrow{}H^2(X,\mathbb{Z})\xrightarrow{}H^2(X,\mathcal{O}_{X})$$
+But the first term is 0, since it is a summand of $H^1(X;\mathbb{C})=0$. The second term is $\mathrm{Pic}(X)$ and the map is $c_1$ which lands in $H^{1,1}$. Since $c_1(K_X)=-3$ it is nonzero, so since $\mathbb{C}=H^2(X;\mathbb{C})=H^{2,0}\oplus H^{1,1}\oplus H^{0,2}$ the only option is for $h^{2,0}=h^{0,2}=0$ and $\mathrm{Pic}(X)=\mathbb{Z}$ generated by a hyperplane. 
+
+Now, the interesring bit is the fourth row, the middle dimensional cohomology. By using the normal bundle, we have that $$c(T_{X})(1+3x)=(1+x)^6=\iota^* c(T_{\mathbb{P}^5})$$We compute $c_1=3x, c_2=6x^2, c_3=2x^3, c_4=9x^4$. Then by Gauss-Bonnet, $$b_{4}+4=\chi(X)=\langle 9x^4, [X] \rangle= 27 $$since $pd(X)=3\omega$. We conclude that $b_4=23$. 
+
+We also have that $H^0(X, \Omega^4)=H^0(X, \mathcal{O}_{X}(-3))=0$ so $h^{4,0}=h^{0,4}=0$. The only bit left is to determine $h^{1,3}=h^{3,1}$. 
+
+Can try Hirzebruch-Riemann-Roch for the cotangent bundle of $X$, by computing $$\chi(\Omega_{X})=-h^{1,1}-h^{1,3}=\int _{X}\mathrm{ch(\Omega_{X})}\mathrm{td}(T_{X})=3\int _{\mathbb{P}^5} \omega \,\mathrm{ch}(\Omega_{\mathbb{P}^5}-\mathcal{O}(-3)) \mathrm{td}(T_{\mathbb{P}^5}-\mathcal{O}(3))  $$
+Because I am lazy, I used the Macaulay 2 code: 
+
+\begin{lstlisting}[language=Python]
+loadPackage "Schubert2"
+P5  = flagBundle({1,5}, VariableNames=>{s,q})
+T = tangentBundle(P5)
+coT = cotangentBundle(P5)
+O1 = dual(P5.Bundles#0)
+w = chern(1,O1)
+NX = O1^**3
+coNX = dual(NX)
+TX = T - NX
+coTX = coT - coNX
+Q = 3 *  w*ch(coTX)*todd(TX)
+print  integral  Q
+\end{lstlisting}
+This gives the answer -2, which implies $h^{1,3}=1$.
+
+Can try to compute $h^{2,2}$ similarly: again by Hirzebruch-Riemann-Roch
+$$h^{2,2}=\chi(\Omega_{X}^2)=\int_{X} \mathrm{ch}(\Omega^2_{X})\mathrm{td}(TX)  $$
+The Macaulay code is: 
+
+\begin{lstlisting}[language=Python] 
+coT2X = exteriorPower_2 coTX
+A = 3*w*ch(coT2X)* todd(TX)
+print integral A
+\end{lstlisting}
+%can add caption by declaring caption = ...
+This gives the correct answer $21$! All in all, the Hodge diamond looks like: 
+
+\begin{center}
+\begin{tikzcd}[row sep=tiny, column sep=tiny]
+    &   &   &   & 1  &   &   &   &   \\
+    &   &   & 0 &    & 0 &   &   &   \\
+    &   & 0 &   & 1  &   & 0 &   &   \\
+    & 0 &   & 0 &    & 0 &   & 0 &   \\
+  0 &   & 1 &   & 21 &   & 1 &   & 0 \\
+    & 0 &   & 0 &    & 0 &   & 0 &   \\
+    &   & 0 &   & 1  &   & 0 &   &   \\
+    &   &   & 0 &    & 0 &   &   &   \\
+    &   &   &   & 1  &   &   &   &  
+  \end{tikzcd}
+\end{center}
+
+We see that, by \ref{th:HKR}, the Hochschild homology is $HH_\bullet(X)=\mathbb{C}[-2]\oplus \mathbb{C}^{25}\oplus \mathbb{C}[2]$. On the other hand, Hochschild homology is additive with respect to semiorthogonal decomposition, and the three exceptional objects contribute to three copies of $\mathbb{C}$ in degree zero, so we see that $HH_\bullet(\mathcal{A}_X)=\mathbb{C}[-2]\oplus \mathbb{C}^{22}\oplus \mathbb{C}[2]$, which is exactly the Hochschild homology of a K3 surface.
+
+These properties of the category $\mathcal{A}_X$ made people suspect that there is an honest, geometric K3 surface inside of $X$. All known cases of cubic fourfolds containing a K3 surface are birational to $\mathbb{P}^4$, which led Kuznetsov to conjecture:
+
+\begin{conjecture}{}{Kuznetsov's conjecture}
+A cubic fourfold is rational if and only if it contains a smooth projective K3 surface $S$ such that $\mathcal{D}(S)\simeq \mathcal{A}_X$.
+\end{conjecture}
+
+In a subsequent section, we will explore different known examples where this is true, and connect the derived categories viewpoint of Kuznetsov with the Hodge-theoretic perspective of Hasset through the paper of Addington-Thomas.
+
+\subsection{The Kuznetsov component is a CY2 category}
+
+We now embark on the proof that the Kuznetsov component is what is called a Calab-Yau 2 category. What this means is that it has a Serre functor which is just given by shifting by $2$, as would be the case if it were the derived category of a K3 surface.
+
+
+
+\subsection{Examples: Pfaffian cubics, cubics containing a plane, nodal cubics}
+
+\subsection{Addington-Thomas}
+
+
+
+
+
+
+
+
 
