More stuff on cubic fourfolds and admissible subcategories

--- a/commands.tex
+++ b/commands.tex
@@ -113,6 +113,7 @@
 \newcommand{\calG}{\mathcal{G}}
 \newcommand{\calL}{\mathcal{L}}
 \newcommand{\calP}{\mathcal{P}}
+\newcommand{\calS}{\mathcal{S}}
 \newcommand{\calI}{\mathcal{I}}
 \newcommand{\calN}{\mathcal{N}}
 \newcommand{\calT}{\mathcal{T}}
